--- a/css/about.css
+++ b/css/about.css
@@ -415,6 +415,7 @@ footer{
     font-size: 14px;
   }
   ._download{
+    color: black;
     /* vertical-align: middle; */
     position:absolute;
     height:10px; top: 0; bottom:0; margin-top:auto; margin-bottom:auto;
