--- a/css/contact.css
+++ b/css/contact.css
@@ -246,7 +246,11 @@ a:hover{
 /* footer */
 
 footer{
-    padding: 830px 0px 0px 6%;
+    /* padding: 830px 0px 0px 6%; */
+    position: absolute;
+    bottom: 15%;
+    left: 7%;
+    width: 480px;
     display: inline-block;
     /* bottom: 3%; */ 
     font-size: 14px;
