--- a/css/works.css
+++ b/css/works.css
@@ -239,7 +239,11 @@ a:hover{
 /* footer */
 
 footer{
-    padding: 830px 0px 0px 6%;
+  position: absolute;
+    bottom: 15%;
+    left: 7%;
+    width: 480px;
+    /* padding: 830px 0px 0px 6%; */
     display: inline-block;
     /* bottom: 3%; */ 
     font-size: 14px;
