--- a/css/works_Momentrip.css
+++ b/css/works_Momentrip.css
@@ -1,6 +1,4 @@
 html,body{
-    width:100%;height:100vh;
-    overflow: hidden;
     font-family: 'Roboto', sans-serif;
     cursor: none;
     transition: all 1000ms ease-in-out;
@@ -17,18 +15,6 @@ html,body{
     }
 }
 
-@keyframes endOpacity {
-  from {
-      opacity: 1;
-  }
-  to {
-      opacity: 0;
-  }
-}
-.endOpacity{
-  animation: endOpacity 1s linear;
-  animation-delay: 2s;
-}
 .imageCircle{
     position: absolute;
     top: 26%;
@@ -116,15 +102,14 @@ nav > ul > li:nth-child(4){
 nav > ul > li:nth-child(3){
     height: 300px;;
 }
-a{
-    text-decoration: none;
-    color: white;
-
+.flex_con > li > a{
+  text-decoration: none;
+  color: white;
 }
-a:hover{
-    opacity: 1;
-    text-decoration: none;
-    color: chartreuse;
+.flex_con > li > a:hover{
+  opacity: 1;
+  text-decoration: none;
+  color: chartreuse;
 }
 .Index{
     padding-bottom: 5%;
@@ -239,11 +224,7 @@ a:hover{
 /* footer */
 
 footer{
-  position: absolute;
-    bottom: 15%;
-    left: 7%;
-    width: 480px;
-    /* padding: 830px 0px 0px 6%; */
+    padding: 830px 0px 0px 6%;
     display: inline-block;
     /* bottom: 3%; */ 
     font-size: 14px;
@@ -411,87 +392,174 @@ footer{
           opacity: 1;
       }
   }
+ /* main */
 
-  /* main */
-
-.ContentsMenu{
+ .ContentsMenu{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 3.5rem;
-    font-weight: 400;
-    text-align: center;
+    top: 20%;
+    left: 13%;
   }
 .ContentsMenu > ul > li{
-      padding-bottom: 8%;
       transition: all 1000ms ease-in-out;
       padding-left: 5%;
   }
 .ContentsMenu > ul > li:nth-child(1){
     font-family: 'Nanum Myeongjo', serif;
-    font-weight: 700;
+    font-weight: 1000;
+    font-size: 5rem;
+    margin-bottom: 7%;
   }
-.ContentsMenu > ul > li:nth-child(2){
-    font-family: 'Noto Serif', serif;
-}
-.ContentsMenu > ul > li:nth-child(3){
-      font-family: 'Heebo', sans-serif;
-}
-.ContentsMenu > ul > li:nth-child(4){
-  font-family: 'Heebo', sans-serif;
-}
-.ContentsMenu > ul > li:nth-child(5){
-  font-family: 'Heebo', sans-serif;
-}
-.ContentsMenu > ul > li:nth-child(6){
-      padding-bottom: 0;
-      font-family: 'Open Sans', sans-serif;
+  ._2{
+      font-weight: bold;
+      font-size: 1.4rem;
+      margin-bottom: 7%;
+  }
+  ._3{
+      font-size: 0.8rem;
+      margin-bottom: 3%;
+      width: 36%;
+      line-height: 30px;
   }
 
   /* 연습연습 */
 
-  #preview{
-      position: absolute;
-      border: none;
-      background: #eee;
-      padding: 2px;
-      color: #fff;
-      display: none;
-  }
-
   ._line{
-    display: block;
-    position: absolute;
-    width: 22px;
-    height: 2px;
-    border-radius: 30px;
-    background-color: black;
     top: 50%;
     left: 10%;
-  }
-  ._line2{
     width:20px;
     height:20px;
-    border-top: 2px solid black;
-    border-left: 2px solid black;
-    transform: rotate(135deg);
-    top: 50%;
-    right: 10%;
+    border-top: 2px solid rgb(0, 0, 0);
+    border-left: 2px solid rgb(0, 0, 0);
+    transform: rotate(-45deg);
     display: inline-block;
     position: absolute;
-    z-index: 9999;
+    z-index: 99999;
   }
-  .cursorImageHover{
-    background-color: chartreuse;
-    width: 100px;
-    height: 100px;
-    transition: all 20ms ease-in-out;
-}
-.click{
-  color: white;
-  font-size: 14px;
-  padding-left: 30px;
-  padding-top: 30px;
-}
 
+  /* 연습 */
+  .wrap-images{
+      display: inline-block;
+      position: absolute;
+      left: 78%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      overflow: hidden;
+  }
+  #ContentsImg{
+      width: 400px;
+      height: auto;
+  }
+    /* download */
+    .download{
+        width: 100px;
+        height: 100px;
+        position: relative;
+        border-radius: 50%;
+        background-color:  chartreuse;
+        vertical-align: middle;
+        font-weight: middle;
+        display: inline-block;
+        left: 80%;
+        font-size: 12px;
+        top: 20px;
+      }
+      ._download{
+        color: black;
+        /* vertical-align: middle; */
+        position:absolute;
+        height:10px; top: 0; bottom:0; margin-top:auto; margin-bottom:auto;
+        left: 25%;
+      }
+      ._imageCircle2{
+        position: relative;
+        left: -5%;
+        top: -5.5%;
+        width: 7rem;
+        animation: spinCircle 3s linear infinite;
+        will-change: spinCircle;
+        transform: none;
+      }
+      @keyframes spinCircle {
+        from {
+            transform:rotate(0);
+        }
+        to {
+            transform:rotate(360deg);
+        }
+      }
+      ._line0{
+        width:20px;
+        height:20px;
+        border-top: 2px solid rgb(0, 0, 0);
+        border-left: 2px solid rgb(0, 0, 0);
+        transform: rotate(405deg);
+        display: inline-block;
+        position: absolute;
+        top: 10%;
+        left: 50%;
+        z-index: 99999;
+      }
+      ._line2{
+        width:20px;
+        height:20px;
+        border-top: 2px solid rgb(0, 0, 0);
+        border-left: 2px solid rgb(0, 0, 0);
+        transform: rotate(-135deg);
+        display: inline-block;
+        position: absolute;
+        top: 90%;
+        left: 50%;
+        z-index: 99999;
+      }
+      .cursorImageHover{
+        background-color: chartreuse;
+        width: 100px;
+        height: 100px;
+        transition: all 20ms ease-in-out;
+    }
+    .click{
+        color: white;
+        font-size: 14px;
+        padding-left: 30px;
+        padding-top: 30px;
+    }
+
+    /* 이미지 줌 */
+    .image {
+      width: 100%;
+      height: 100%;
+    }
+    
+    
+    .zoom {
+      transform: scale(1);
+      transition: transform 250ms;
+    }
+    
+    .zoom-in {
+      transform: scale(1.6);
+      transition: transform 250ms;
+    }
+    .download > a:hover{
+      color: white;
+      font-weight: bolder;
+    }
+
+    /* 커서 깜빡깜빡 */
+    #dynamic{
+      position: relative;
+      display: inline-block;
+    }
+    #dynamic::after{
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      right: -10px;
+      width: 4px;
+      height: 100%;
+      background-color:  chartreuse;
+    }
+    #dynamic.active::after{
+      display: none;
+    }
