--- a/css/works_Momentrip.css
+++ b/css/works_Momentrip.css
@@ -404,7 +404,7 @@ footer{
       padding-left: 5%;
   }
 .ContentsMenu > ul > li:nth-child(1){
-    font-family: 'Nanum Myeongjo', serif;
+  font-family: 'Open Sans', sans-serif;
     font-weight: 1000;
     font-size: 5rem;
     margin-bottom: 7%;
