--- a/css/works_Memories.css
+++ b/css/works_Memories.css
@@ -408,6 +408,7 @@ footer{
     font-weight: 1000;
     font-size: 5rem;
     margin-bottom: 7%;
+    height: 5rem;
   }
   ._2{
       font-weight: bold;
