--- a/css/contact.css
+++ b/css/contact.css
@@ -262,7 +262,10 @@ footer{
 .footerColorNav{
     color: white;
 }
-
+.footerColor > h1{
+  padding-bottom: 3%;
+  font-weight: bold;
+}
 
 /* 
   .gradient-purple-blue {
