--- a/css/works.css
+++ b/css/works.css
@@ -255,7 +255,10 @@ footer{
 .footerColorNav{
     color: white;
 }
-
+.footerColor > h1{
+  padding-bottom: 3%;
+  font-weight: bold;
+}
 
 /* 
   .gradient-purple-blue {
@@ -419,7 +422,7 @@ footer{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 3.5rem;
+    font-size: 2.8rem;
     font-weight: 400;
     text-align: center;
   }
@@ -428,26 +431,30 @@ footer{
       transition: all 1000ms ease-in-out;
       padding-left: 5%;
   }
-.ContentsMenu > ul > li:nth-child(1){
+  .ContentsMenu > ul > li:nth-child(1){
+    font-family: 'Noto Serif', serif;
+    font-weight: 700;
+  }
+.ContentsMenu > ul > li:nth-child(2){
     font-family: 'Nanum Myeongjo', serif;
     font-weight: 700;
     color: rgb(97, 119, 89);
   }
-.ContentsMenu > ul > li:nth-child(2){
+.ContentsMenu > ul > li:nth-child(3){
     font-family: 'Noto Serif', serif;
 }
-.ContentsMenu > ul > li:nth-child(3){
+.ContentsMenu > ul > li:nth-child(4){
       font-family: 'Heebo', sans-serif;
       color: rgb(97, 119, 89);
 }
-.ContentsMenu > ul > li:nth-child(4){
+.ContentsMenu > ul > li:nth-child(5){
   font-family: 'Heebo', sans-serif;
   color: rgb(97, 119, 89);
 }
-.ContentsMenu > ul > li:nth-child(5){
+.ContentsMenu > ul > li:nth-child(6){
   font-family: 'Heebo', sans-serif;
 }
-.ContentsMenu > ul > li:nth-child(6){
+.ContentsMenu > ul > li:nth-child(7){
       padding-bottom: 0;
       font-family: 'Open Sans', sans-serif;
   }
