--- a/css/works_NightPicnic.css
+++ b/css/works_NightPicnic.css
@@ -414,7 +414,7 @@ footer{
       padding-left: 5%;
   }
 .ContentsMenu > ul > li:nth-child(1){
-    font-family: 'Nanum Myeongjo', serif;
+  font-family: 'Open Sans', sans-serif;
     font-weight: 1000;
     font-size: 5rem;
     margin-bottom: 7%;
@@ -451,13 +451,14 @@ footer{
   .wrap-images{
       display: inline-block;
       position: absolute;
-      left: 78%;
-      top: 50%;
+      left: 60%;
+      top: 30%;
       transform: translate(-50%, -50%);
       overflow: hidden;
+      transform: rotate(-20deg);
   }
   #ContentsImg{
-      width: 350px;
+      width: 550px;
       height: auto;
   }
     /* download */
